media/atd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: atd
  template:
    metadata:
      labels:
        app: atd
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9091"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: gluetun
        image: 192.168.50.2:5050/media/atd/vpn:dev
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "1Gi"
        securityContext:
          privileged: true
          capabilities:
            add:
              - NET_ADMIN
        volumeMounts:
        - name: tun-device
          mountPath: /dev/net/tun
        ports:
        - containerPort: 9091
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - wget -q -O- https://ipinfo.io/ip || exit 1
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
      - name: transmission
        image: 192.168.50.2:5050/media/atd/atd:dev
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
          limits:
            memory: "3Gi"
        readinessProbe:
          tcpSocket:
            port: 9091
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - name: complete-volume
          mountPath: /media-cache/complete
        - name: incomplete-volume
          mountPath: /media-cache/incomplete
      volumes:
      - name: complete-volume
        hostPath:
          path: /d/media-cache/ENV/complete
          type: DirectoryOrCreate
      - name: incomplete-volume
        hostPath:
          path: /d/media-cache/ENV/incomplete
          type: DirectoryOrCreate
      - name: tun-device
        hostPath:
          path: /dev/net/tun
          type: CharDevice
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      imagePullSecrets:
      - name: gitlab-registry
