media/atd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: transmission.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atd
                port:
                  number: 9091
